<resources>
    <string name="app_name">NUMAD21Sp-ColinRiley</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="about">About</string>
    <string name="clicky">Clicky</string>

    <string name="info">Click to learn more about me.</string>
    <string name="name">Name: Colin Riley</string>
    <string name="email">Email: riley.colin5@northeastern.edu</string>
    <string name="bio">I am a 5th year undergrad at Northeastern University
    majoring in Computer Science with a music minor. I mostly have web development
    experience from the 3 co-ops I have been on, so I am looking to gain some mobile
    development experience too.</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_world">Hello World!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="colin_pic_desc">colin_pic</string>
    <string name="pressed_text">Pressed: </string>

    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_c">C</string>
    <string name="button_d">D</string>
    <string name="button_e">E</string>
    <string name="button_f">F</string>
    <string name="link_collector">Link Collector</string>
    <string name="link_name_placeholder">Name</string>
    <string name="link_url_placeholder">URL</string>
    <string name="go_text">Go</string>
    <string name="locator">Locator</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="at_your_service">At Your Service</string>
    <string name="get_current_temperature">Get Current Temperature</string>
    <string name="current_temperature">Current temperature (f):</string>
    <string name="go_button_text">Go</string>
    <string name="enter_zip_code">Enter ZIP code</string>
</resources>